Feat: Controlling for a few edge cases on warehouse calls
