# server/routes/items.js
@@ -15,12 +15,14 @@ async function checkItemParams(body) {
     return 'price, quantity, & WarehouseId have to be a number';
   }
   if (typeof name !== 'string') return 'Name must be a valid string';
+
   if (WarehouseId && typeof WarehouseId === 'number') {
     const warehouse = await Warehouse.findByPk(WarehouseId);
     if (warehouse === null) {
       return 'That warehouse id does not exsist';
     }
-  } else return true;
+  }
+  return true;
 }
 //Read All
 router.get('/', async (req, res, next) => {
@@ -41,7 +43,6 @@ router.post('/', async (req, res, next) => {
     } else {
       const { name, quantity, price } = req.body;
       const newItem = { name: name, quantity: quantity, price: price };
-      //findOrCreate?
       const itemCreated = await Item.create(newItem);
       if (req.body.WarehouseId) itemCreated.setWarehouse(req.body.WarehouseId);
       res.json(itemCreated);
@@ -53,13 +54,18 @@ router.post('/', async (req, res, next) => {
 
 // Update
 router.put('/:itemId', async (req, res, next) => {
-  const { name, quantity, price } = req.body;
-
+  // do check
   try {
+    const check = await checkItemParams(req.body);
+    if (check !== true) {
+      return res.json(check);
+    }
     const { itemId } = req.params;
+    const { name, quantity, price } = req.body;
+
     const item = await Item.findByPk(itemId);
-    const newItem = { name: name, quantity: quantity, price: price };
-    const itemUpdated = await item.update(newItem);
+    const updatedItem = { name: name, quantity: quantity, price: price };
+    const itemUpdated = await item.update(updatedItem);
 
     if (req.body.WarehouseId && req.body.WarehouseId !== item.WarehouseId)
       itemUpdated.setWarehouse(req.body.WarehouseId);
@@ -75,6 +81,7 @@ router.delete('/:itemId', async (req, res, next) => {
   try {
     const { itemId } = req.params;
     const item = await Item.findByPk(itemId);
+    if (item === null) return res.json('Warehouse does not exsist');
     item.destroy();
     res.json(item);
   } catch (error) {
